--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="kalkulator">
-        <div id="dis">1+2=3</div>
+        <div id="dis"></div>
         <button onclick="cl()">C</button>
         <button onclick="add('/')">/</button>
         <button onclick="add('*')">*</button>
